# ReportFlow-Studio

./: .env.example  .gitignore  GEMINI.md  PRD.md  README.md  data.txt  decomposed_tasks.json  pyproject.toml  run.py
agents/core/: orchestrator.py
agents/memories/: vector_store.py
agents/prompts/: library.py
agents/workflows/dify_yaml_generator/: __init__.py  nodes.py  service.py
app/server/: cli.py  config.py  database.py  logger.py  main.py
app/server/api/: blueprints.py  files.py  templates.py  yaml.py
app/server/models/: history.py  project.py  settings.py
app/server/schemas/: template.py
app/server/services/: blueprint_service.py  dify_builder.py  template_service.py
app/server/ui/: layout.py  settings_page.py  styles.py  template_page.py  yaml_gen_page.py
app/server/utils/: context.py  dsl_validator.py  file_io.py  network.py  visualizer.py
app/web/: package.json
app/web/src/: App.tsx  BlueprintCanvas.tsx  index.css
backend/: cli.py
backend/agents/core/: orchestrator.py
backend/agents/memories/: vector_store.py
backend/agents/prompts/: library.py
backend/agents/schemas/: models.py
backend/agents/workflows/: yaml_generator.py
backend/app/: config.py  logger.py  main.py
backend/app/api/: blueprints.py  files.py  templates.py  yaml.py
backend/app/models/: project.py
backend/app/schemas/: blueprint.py  template.py
backend/schemas/: blueprint.py
backend/services/: dify_builder.py
docs/: deepagents_usage.md  dify_error_log.md  多路判断.yml
docs/references/: basic_llm_chat_workflow.yml  verified_dsl_snippets.json
frontend/: package-lock.json
output/debug/: debug_v1_linear.yml  debug_v2_simple_router.yml  debug_v3_code_outputs.yml  generated_tongyi_http.yml  legacy_ifelse.yml  level_1_base.yml  level_2_llm.yml  level_3_ifelse.yml  test_a_linear.yml  test_b_branch.yml
output/workflows/: pure_workflow_example.yml  企业全维画像.yml  企业授信综合评价.yml  信贷预警分析.yml  经营分析.yml
scripts/: debug_legacy_ifelse.py  generate_atomic_tests.py  generate_debug_variants.py  generate_pure_yaml.py  ingest.py  inspect_table.py  lint_and_format.py  run_advanced_complexity_test.py  run_corporate_analysis_test.py  run_stress_test.py  test_http_tongyi_yaml.py  test_parse.py  validate_dsl.py  verify_template.py
tests/: test_agent_capabilities.py  test_api.py
(+8 files in other folders)
