[project]
name = "report-flow-studio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-qdrant>=0.1.0",
    "qdrant-client>=1.7.0",
    "langchain>=1.2.0",
    "langchain-community>=0.4.1",
    "langchain-core>=0.2.38",
    "langchain-openai>=1.1.6",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "typer>=0.21.0",
    "deepagents>=0.3.1",
    "dashscope>=1.25.5",
    "fastapi>=0.128.0",
    "uvicorn>=0.40.0",
    "python-docx>=1.2.0",
    "sqlmodel>=0.0.31",
    "python-multipart>=0.0.21",
    "pytest>=9.0.2",
    "httpx>=0.28.1",
    "jsonschema>=4.25.1",
    "nicegui>=3.4.1",
    "openpyxl>=3.1.5",
]

[dependency-groups]
dev = [
    "ruff>=0.14.10",
]

[tool.ruff]
target-version = "py310"

line-length = 120

[tool.ruff.lint]
# 2. 启用规则集
select = [
    "F",    # Pyflakes: 发现逻辑错误 (如未使用的变量)
    "E",    # pycodestyle errors: 代码风格错误
    "W",    # pycodestyle warnings: 代码风格警告
    "I",    # isort: 自动对 import 进行排序和归类 (非常推荐!)
    "UP",   # pyupgrade: 自动升级语法 (包含你想要的 X | Y)
    "B",    # flake8-bugbear: 发现潜在的 Bug 设计
    "SIM",  # flake8-simplify: 建议更简单的代码写法
    "N",    # pep8-naming: 检查变量/函数命名规范
]

# 忽略的规则
ignore = [
    "E501", # 忽略行过长检查 (交给 format 自动处理，或者容忍特例)
]

# 针对特定文件的忽略规则
extend-per-file-ignores = { "app/server/app/api/*.py" = ["B008"], "app/server/cli.py" = ["B008"], "scripts/*.py" = ["B008", "E402"] }

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
